--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 fastapi
-uvicorn[standard]
-
-openai
-sendgrid
-
-sqlalchemy>=2.0
+uvicorn
+sqlalchemy
 psycopg2-binary
 python-dotenv
+sendgrid
+openai
